k8s/core/core1.yml
apiVersion: v1
kind: Service
metadata:
  name: core1
  labels:
    app: core1
spec:
  ports:
    - port: 8090
      name: http
  type: NodePort
  selector:
    app: core1
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: core1-blue
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: core1
        version: v1
    spec:
      containers:
        - name: core1-blue
          image: twdd.icp.skt.com:8500/istio-test/istio-core1-blue
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: core1-green
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: core1
        version: v2
    spec:
      containers:
        - name: core1-green
          image: twdd.icp.skt.com:8500/istio-test/istio-core1-green
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
