k8s/core/core1-dr.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dr-core1-app
spec:
  host: core1-app
  subsets:
  - name: v1-deploy
    labels:
      version: v1
  - name: v2-deploy
    labels:
      version: v2
