k8s/core/core1-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-core1-app
spec:
  hosts:
  - core1-app
  http:
  - route:
    - destination:
        host: core1-app
        subset: v1-deploy
      weight: 50
    - destination:
        host: core1-app
        subset: v2-deploy
      weight: 50
